--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+section {
+  margin: 0 auto;
+  max-width: 42rem;
+  padding: 1rem 1rem 2rem;
+}
+@media screen and (min-width: 480px) {
+  section {
+    padding: 1rem 2rem 2rem;
+  }
+}
+h1 {
+  font-size: 2rem;
+  font-weight: 300;
+  margin: 0;
+}
+h2 {
+  font-size: 1.25rem;
+  font-weight: 300;
+  margin: 0.25rem 0 0;
+}
+p {
+  margin: 0;
+  font-weight: 400;
+}
+button {
+  display: inline-block;
+  padding: 0.5rem 0.75rem;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.15;
+  letter-spacing: 0.025rem;
+  border: none;
+  border-radius: 0.25rem;
+  border: 1px solid #aaa;
+  background-color: transparent;
+  color: #444;
+  outline: none;
+  text-decoration: none;
+  user-select: none;
+  width: auto;
+  height: auto;
+  margin: auto;
+}
+button:hover {
+  text-decoration: none;
+  border-color: #555;
+  color: #000;
+}
+label {
+  display: block;
+  margin: 0.75rem 0;
+}
+input {
+  display: block;
+  height: 2rem;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.5rem;
+  outline: none;
+  width: 100%;
+  margin: 0.25rem 0;
+}
+input:hover {
+  border-color: #aaa;
+}
+input:focus {
+  border-color: #444;
 }
